Some fix on iPhone 6 plus device

--- a/source/stylesheets/modules/_slider.sass
+++ b/source/stylesheets/modules/_slider.sass
@@ -133,6 +133,9 @@
       +size(20.3% 43%)
       right: -6%
 
+    +media($iphone6p)
+      height: 52%
+
 
   .slick-dots
     +at2x("slider/dots", "png", 351px, auto, true)
@@ -392,6 +395,9 @@
       z-index: 5
       top: 85px
       width: 100%
+
+      +media($iphone6p)
+        top: 75px
 
       li
         display: inline
