--- a/source/stylesheets/pages/_partner.sass
+++ b/source/stylesheets/pages/_partner.sass
@@ -4,7 +4,7 @@
     min-height: 600px
 
     +media($mobile)
-      min-height: auto
+      min-height: 100px
 
   .description
     +span-columns(8)
